--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
 #myCssStyle {
   background: red;
 }
+#MyCssStyle {
+  background: cyan;
+}
+#Yeet {
+  background: magenta;
+  color: blue;
+}
+#something {
+  background: greenyellow;
+}
